# BankChurn_PredictionModel

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  python-app.yml1
EDA/: Female_Exited.csv  Female_NotExited.csv  Male_Exited.csv  Male_NotExited.csv  crosstab1.csv  crosstab2.csv  crosstab3.csv  crosstab4.csv  crosstab5.csv
notebook/: project_2.ipynb
